Fixed item text alignment

--- a/src/css/_icons.scss
+++ b/src/css/_icons.scss
@@ -21,14 +21,12 @@
 	.ind-filelist & {
 		font-size:2.9em;
 		line-height: 0.8em;
-		height: 38px;
-		width: 23px;
+		//height: 38px;
+		//width: 23px;
 	}
 	.ind-iconlist & {
 		font-size: 4.5em;
 		line-height: 0.8em;
-		//width: 37px;
-		//height: 45px;
 	}
 	.ind-detaillist & {
 		font-size: 2.2em;
